--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "chrome",
             "request": "launch",
             "name": "Open index.html",
-            "file": "c:\\Users\\dhruv\\Desktop\\CongressApp\\public\\index.html"
+            "file": "c:\\Users\\dhruv\\Desktop\\CongressApp\\index.html"
         }
     ]
 }
